k8s-deploy-with-ingress/calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service-api
spec:
  type: ClusterIP
  selector:
    app: calculator
  ports:
  - name: calc-port
    protocol: TCP
    port: 8080
    targetPort: 8080
