k8s-deploy-with-ingress/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  type: NodePort
  ports:
  - name: udp-5775
    port: 5775
    protocol: UDP
    targetPort: 5775
  - name: udp-6831
    port: 6831
    protocol: UDP
    targetPort: 6831
  - name: udp-6832
    port: 6832
    protocol: UDP
    targetPort: 6832
  - name: tcp-5778
    port: 5778
    protocol: TCP
    targetPort: 5778
  - name: tcp-16686
    port: 16686
    protocol: TCP
    targetPort: 16686
  - name: tcp-14268
    port: 14268
    protocol: TCP
    targetPort: 14268
  - name: tcp-9411
    port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    app: jaeger
