k8s-deploy-with-ingress/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-api
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
  - name: user-request-port
    protocol: TCP
    port: 8080
    targetPort: 8080
