k8s-deploy-with-ingress/ingress-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: nginx-telemetry-poc
spec:
  ingressClassName: nginxmain
  rules:
  - host: sample.example.app
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: user-service-api
              port:
                number: 8080
